--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,16 @@
 sudo: false
 language: ruby
 cache: bundler
+gemfile:
+  - gemfiles/3.5.0.gemfile
+  - gemfiles/3.6.0.gemfile
+  - gemfiles/3.7.0.gemfile
 rvm:
+  - 2.5.0
   - 2.4.0
-before_install: gem install bundler -v 1.16.4
+  - 2.3.0
+  - jruby
+  - truffleruby
+before_install:
+  - gem update --system
+  - gem install bundler
