pin rubygems version
`gem install bundler` is failing on truffleruby when using latest
rubygems (v3.0.2)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ rvm:
   - 2.3.0
   - truffleruby
 before_install:
-  - gem update --system
+  - gem update --system 2.6.14.1
   - gem install bundler
